API add data into table with javascript

--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@
     <title>Fetcing API</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css"> -->
-    <script src="./assets/js/script.js"></script>
 </head>
 <body>
     <h1>Data Table</h1>
-    <table id="content">
-
+    <table id="myTable" border="1" cellpadding="5" cellspacing="0">
+        <tr>
+            <td>No.</td>
+            <td>Name</td>
+            <td>Period Rotation</td>
+            <td>Diameter</td>
+            <td>Climate</td>
+            <td>Gravity</td>
+        </tr>
     </table>
+
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
