--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Fetcing API</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css"> -->
+    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css">
 </head>
-<body>
-    <h1>Data Table</h1>
-    <table id="myTable" border="1" cellpadding="5" cellspacing="0">
-        <tr>
-            <td>No.</td>
-            <td>Name</td>
-            <td>Period Rotation</td>
-            <td>Diameter</td>
-            <td>Climate</td>
-            <td>Gravity</td>
-        </tr>
-    </table>
 
+<body>
+    <div id="table_container">
+        <h1 style="text-align: center">Data Table</h1>
+        <table id="myTable" border="1" cellpadding="5" cellspacing="0">
+            <tr id="thead">
+                <td>No.</td>
+                <td>Name</td>
+                <td>Period Rotation</td>
+                <td>Diameter</td>
+                <td>Climate</td>
+                <td>Gravity</td>
+            </tr>
+        </table>
+    </div>
     <script src="./assets/js/script.js"></script>
 </body>
+
 </html>
